# pretix-postfinance

./: AGENTS.md  README.md  devenv.nix  flake.nix  postfinancecheckout.nix  pyproject.toml
.github/workflows/: test.yml
pretix_postfinance/: api.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_postfinance/static/pretix_postfinance/: pretix-postfinance.js
pretix_postfinance/templates/pretixplugins/postfinance/: control.html  control_settings.html  pending.html
tests/: conftest.py  test_api.py  test_installments.py  test_line_items.py  test_provider.py  test_settings.py  test_views.py  test_webhook.py
