[build-system]
requires = ["setuptools", "pretix-plugin-build"]
build-backend = "setuptools.build_meta"

[project]
name = "pretix-postfinance"
version = "1.3.0"
description = "PostFinance Checkout payment plugin for pretix"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Sweenu", email = "contact@sweenu.xyz"}
]
maintainers = [
    {name = "Sweenu", email = "contact@sweenu.xyz"},
]
keywords = ["pretix", "payment", "postfinance", "checkout"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "postfinancecheckout>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-django>=4.0",
    "pretix>=2026.3.0",
    "ty>=0.0.29",
    "ruff>=0.1",
    "commitizen>=4.9.1",
]

[project.urls]
Homepage = "https://github.com/sweenu/pretix-postfinance"
Repository = "https://github.com/sweenu/pretix-postfinance"

[project.entry-points."pretix.plugin"]
pretix_postfinance = "pretix_postfinance:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_postfinance.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
all = "error"

[[tool.ty.overrides]]
include = ["pretix_postfinance/api.py"]

[tool.ty.overrides.rules]
unknown-argument = "warn"

[[tool.ty.overrides]]
include = ["pretix_postfinance/payment.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "warn"
invalid-method-override = "warn"
unresolved-attribute = "warn"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes (unused imports, variables, etc.)
    "I",      # isort
    "W",      # pycodestyle warnings
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie (misc lints)
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
]
ignore = [
    "RUF005",  # Consider iterable unpacking - common pattern in pretix plugins
]

[tool.ruff.lint.per-file-ignores]
# Plugin code overrides base class methods, so unused args are expected
"pretix_postfinance/*.py" = ["ARG002"]
# Django signals require sender and kwargs arguments
"pretix_postfinance/signals.py" = ["ARG001"]
# Test files: unused args in mocks/fixtures, unused vars from unpacking, long URLs
"tests/*.py" = ["ARG001", "ARG005", "E402", "F841", "RUF059"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["pretix_postfinance"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_files = [
    "pretix_postfinance/__init__.py:__version__",
    "flake.nix:version"
]
tag_format = "v$version"
update_changelog_on_bump = false
annotated_tag = true
gpg_sign = true
bump_message = "release: $new_version"
